resources/ej2-base/releasenotes/UWP/Release-Notes/v19.2.0.55/pdf.md
## PDF

### Bug Fixes
{:#PDF-bug-fixes}

* \#332856 - Line Annotation border will be preserved properly while increasing the border width.
* \#337083 - PDF page CropBox values will be retrieved properly.
* \#336773 - Form fields value will be shown properly while merging PDF documents.
* \#336179 - NullReferenceException will no longer occur while saving the PDF documents.
* \#335990 - ArgumentException will no longer occurs while getting font from the PdfLoadedFreeTextAnnotation.
* \#334841 - Exception will no longer occur while flattening the merged PDF document.
* \#337268 - Font will be preserved properly on text box fields.
* \#334076 - Single Quote characters will be exported properly while exporting form fields.
* \#334841 - PDF page rotation angle will be returned properly.
* \#336170 - Text box value will be retrieved properly.
* \#334669 - Contents inside the grid will be word-wrapped properly.
* \#166356 - The certificate status will be returned properly from the existing signature field.
* \#332200 - Form field values will be preserved properly.
* \#323169, \#323166, \#323190 - Form fields data will be exported equivalent to Adobe Acrobat.
* \#331722 - Annotations will be added properly while importing pages from another PDF document.
* \#331305 - Additional section tags will not be added while creating tagged PDF documents.
* \#331188 - Exception will no longer occur while adding a barcode to the X1A conformance PDF document.
* \#326750 - Tags will be reading properly on their order while creating a PDF grid.
* \#334405 - Annotations multiline comments will be exported properly.
* \#325515 - Annotations will be located properly if the PDF document contains crop box entries.
* \#331429 - Overlapping issue will no longer occur while drawing a PDF grid with row/column-span.
* \#334340 - QR barcode size will be retrieved properly before drawn it to the PDF document.

